# Autonomous-Research-Paper-Analyzer

./: .gitignore  README.md  pyproject.toml  report.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
knowledge/: user_preference.txt
src/autonomous_research_paper_analyzer_v2/: api.py  crew.py  main.py
src/autonomous_research_paper_analyzer_v2/config/: agents.yaml  tasks.yaml
