[project]
name = "autonomous_research_paper_analyzer_v2"
version = "0.1.0"
description = "Autonomous_Research_Paper_Analyzer_v2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.9.3",
    "tavily-python>=0.5.0",
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "pypdf>=5.1.0",
]

[project.scripts]
autonomous_research_paper_analyzer_v2 = "autonomous_research_paper_analyzer_v2.main:run"
run_crew = "autonomous_research_paper_analyzer_v2.main:run"
train = "autonomous_research_paper_analyzer_v2.main:train"
replay = "autonomous_research_paper_analyzer_v2.main:replay"
test = "autonomous_research_paper_analyzer_v2.main:test"
run_with_trigger = "autonomous_research_paper_analyzer_v2.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
